解决RPC客户端连接池空指针异常